--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.40.0",
+    "cookie": "^0.5.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "jsonwebtoken": "^9.0.2",
     "next": "13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
