--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^3.1.0",
     "@prisma/client": "^5.2.0",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
