--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "name": "pf-henry-vianda-app",
+  "browser": {
+    "fs": false,
+    "os": false,
+    "path": false
+  },
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +14,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth0/nextjs-auth0": "^3.1.0",
     "@prisma/client": "^5.2.0",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
@@ -17,8 +21,11 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.40.0",
     "cookie": "^0.5.0",
+    "encoding": "^0.1.13",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "firebase": "^10.4.0",
+    "jose": "^4.14.6",
     "jsonwebtoken": "^9.0.2",
     "next": "13.4.19",
     "postcss": "8.4.28",
