--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "firebase": "^10.4.0",
+    "html-to-image": "^1.11.11",
     "jose": "^4.14.6",
     "jsonwebtoken": "^9.0.2",
     "next": "13.4.19",
