--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
     "react-icons": "^4.10.1",
+    "react-qr-code": "^2.0.12",
     "tailwindcss": "3.3.3"
   },
   "devDependencies": {
