--- a/package.json
+++ b/package.json
@@ -23,22 +23,22 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.40.0",
     "cookie": "^0.5.0",
+    "daisyui": "^3.6.4",
     "encoding": "^0.1.13",
     "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "^13.5.2",
     "firebase": "^10.4.0",
     "html-to-image": "^1.11.11",
     "jose": "^4.14.6",
     "jsonwebtoken": "^9.0.2",
     "mercadopago": "^1.5.17",
-    "next": "13.4.19",
+    "next": "^13.5.2",
     "postcss": "8.4.28",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-icons": "^4.10.1",
     "react-qr-code": "^2.0.12",
-    "daisyui": "^3.6.4",
     "tailwindcss": "3.3.3"
   },
   "devDependencies": {
